Fix color contrast issue on releasenotes and dead link

--- a/scss/_styleguide-base.scss
+++ b/scss/_styleguide-base.scss
@@ -597,6 +597,7 @@ figure.highlight{
 
 code{
   background-color: $color-gray-pale;
+  color: $color-black;
 }
 
 code,
